manifests/acoustics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acoustics
  namespace: hlidskjalf
  labels:
    app: acoustics
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: acoustics
  template:
    metadata:
      labels:
        app: acoustics
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: acoustics
                topologyKey: kubernetes.io/hostname
      containers:
        - name: acoustics
          image: docker.io/yumikokawaii/acoustics:12f4c28
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
          ports:
            - name: grpc
              containerPort: 10443
              protocol: TCP
            - name: http
              containerPort: 10080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/v1/health/liveness
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/v1/health/liveness
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /api/v1/health/readiness
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
