manifests/acoustics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acoustics
  labels:
    app: acoustics
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: acoustics.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acoustics
                port:
                  name: http
